--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,9 +13,9 @@
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="/">
                 <% if (user) { %>
-                    <img src="/images/pm.jpg" alt="Logo" height="40" class="me-2">
+                    <img src="/images/pm.jpeg" alt="Logo" height="40" class="me-2">
                 <% } else { %>
-                    <img src="/images/pm.jpg" alt="Logo Desconectado" height="40" class="me-2">
+                    <img src="/images/pm.jpeg" alt="Logo Desconectado" height="40" class="me-2">
                 <% } %>
                 <span>Sistema de Votación</span>
             </a>
